--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-4">
                     <div class="blog-box">
                         <div class="blog-img">
-                            <img class="img-fluid" src="images/blog-img.jpg" alt="" />
+                            <img class="img-fluid" src="img/show/1.jpeg" alt="" />
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
@@ -630,7 +630,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-4">
                     <div class="blog-box">
                         <div class="blog-img">
-                            <img class="img-fluid" src="images/blog-img-01.jpg" alt="" />
+                            <img class="img-fluid" src="img/show/2.jpeg" alt="" />
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
@@ -648,7 +648,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-4">
                     <div class="blog-box">
                         <div class="blog-img">
-                            <img class="img-fluid" src="images/blog-img-02.jpg" alt="" />
+                            <img class="img-fluid" src="img/show/3.jpeg" alt="" />
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
