--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>T-PIE<br>Clothing</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
+                            <p class="m-b-40"><p>Wear your own creation
+</p>
                             <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
                         </div>
                     </div>
